--- a/source/CanvasManifest.json
+++ b/source/CanvasManifest.json
@@ -11,8 +11,8 @@
     "AppPreviewFlagsMap": {
       "aibuilderserviceenrollment": false,
       "allowmultiplescreensincanvaspages": false,
-      "appinsightserrortracing": false,
-      "appinstrumentationcorrelationtracing": false,
+      "appinsightserrortracing": true,
+      "appinstrumentationcorrelationtracing": true,
       "autocreateenvironmentvariables": false,
       "behaviorpropertyui": false,
       "blockmovingcontrol": false,
@@ -22,7 +22,7 @@
       "consistentreturnschemafortabularfunctions": true,
       "copyandmerge": true,
       "dataflowanalysisenabled": false,
-      "datatablev2control": false,
+      "datatablev2control": true,
       "dataverseactionsenabled": false,
       "delaycontrolrendering": false,
       "delayloadscreens": true,
@@ -30,7 +30,7 @@
       "disablecdsfileandlargeimage": false,
       "disableruntimepolicies": false,
       "dynamicschema": false,
-      "enableappembeddingux": false,
+      "enableappembeddingux": true,
       "enablecanvasappruntimecopilot": false,
       "enablecomponentnamemaps": true,
       "enablecomponentscopeoldbehavior": true,
@@ -59,7 +59,7 @@
       "formularepair": false,
       "generatedebugpublishedapp": false,
       "herocontrols": false,
-      "improvedtabstopbehavior": false,
+      "improvedtabstopbehavior": true,
       "isemptyrequirestableargument": true,
       "keeprecentscreensloaded": false,
       "legacyformulabar": false,
@@ -71,7 +71,7 @@
       "optimizedforteamsmeeting": false,
       "packagemodernruntime": false,
       "parallelcodegen": false,
-      "pdffunction": false,
+      "pdffunction": true,
       "powerfxdecimal": false,
       "powerfxv1": false,
       "preferpayamlv3inux": false,
